--- a/ipython/Wordnet.ipynb
+++ b/ipython/Wordnet.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -34,13 +34,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "sgj4wE8NzWS1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grammar with 23 productions (start state = S)\n",
+      "    S -> NP VP [1.0]\n",
+      "    VP -> V NP [0.59]\n",
+      "    VP -> V [0.4]\n",
+      "    VP -> VP PP [0.01]\n",
+      "    NP -> Det N [0.41]\n",
+      "    NP -> Name [0.28]\n",
+      "    NP -> NP PP [0.31]\n",
+      "    PP -> P NP [1.0]\n",
+      "    V -> 'saw' [0.21]\n",
+      "    V -> 'ate' [0.51]\n",
+      "    V -> 'ran' [0.28]\n",
+      "    N -> 'boy' [0.11]\n",
+      "    N -> 'cookie' [0.12]\n",
+      "    N -> 'table' [0.13]\n",
+      "    N -> 'telescope' [0.14]\n",
+      "    N -> 'hill' [0.5]\n",
+      "    Name -> 'Jack' [0.52]\n",
+      "    Name -> 'Bob' [0.48]\n",
+      "    P -> 'with' [0.61]\n",
+      "    P -> 'under' [0.39]\n",
+      "    Det -> 'the' [0.41]\n",
+      "    Det -> 'a' [0.31]\n",
+      "    Det -> 'my' [0.28]\n"
+     ]
+    }
+   ],
    "source": [
     "# 촘스키 CGF 문법규칙\n",
     "from nltk.grammar import toy_pcfg2\n",
@@ -50,13 +81,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "XO64HgtKzWTC"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synset list : \n",
+      "[Synset('bank.n.01'), Synset('depository_financial_institution.n.01'), Synset('bank.n.03'), Synset('bank.n.04'), Synset('bank.n.05'), Synset('bank.n.06'), Synset('bank.n.07'), Synset('savings_bank.n.02'), Synset('bank.n.09'), Synset('bank.n.10'), Synset('bank.v.01'), Synset('bank.v.02'), Synset('bank.v.03'), Synset('bank.v.04'), Synset('bank.v.05'), Synset('deposit.v.02'), Synset('bank.v.07'), Synset('trust.v.01')]\n",
+      "\n",
+      "bank.n.02 뜻과 예제 : \n",
+      "a financial institution that accepts deposits and channels the money into lending activities\n",
+      "['he cashed a check at the bank', 'that bank holds the mortgage on my home']\n",
+      "\n",
+      "trust.v.01 뜻과 예제 :\n",
+      "have confidence or faith in\n",
+      "['We can trust in God', 'Rely on your friends', 'bank on your good education', \"I swear by my grandmother's recipes\"]\n"
+     ]
+    }
+   ],
    "source": [
     "# WordNet 데이터를 활용한 의미관계 분석\n",
     "from nltk.corpus import wordnet as wn\n",
@@ -70,17 +118,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "yxd_6tpQzWTr"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a container (usually with a slot in the top) for keeping money at home'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# pywsd 를 사용한 문장 내 의미분석\n",
-    "sent = 'I went to the bank to deposit my money'\n",
-    "# sent    = 'I bank my money'\n",
+    "# sent = 'I went to the bank to deposit my money'\n",
+    "sent    = 'I bank my money'\n",
     "ambiguous = 'bank'\n",
     "\n",
     "from pywsd.lesk import simple_lesk\n",
@@ -101,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,13 +182,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오타 수정결과: the quick brown fox jumps over the lazy dog\n",
+      "편집거리 총합: 8\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"thequickbrownfoxjumpsoverthelazydog\"\n",
     "spellCheck(\"../data/frequency_dictionary_en_82_765.txt\", sentence=text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
